apps/ente/server/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: server-ente
  namespace: ynoacamino
  labels:
    app: server-ente

spec:
  selector:
    app: server-ente
  ports:
    - port: 80
      targetPort: 8080
      name: http
