apps/ente/server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: server-ente
  namespace: ynoacamino
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    traefik.ingress.kubernetes.io/redirect-entry-point: https

spec:
  tls:
    - hosts:
        - ente.ynoacamino.me
      secretName: ente-tls
  rules:
    - host: ente.ynoacamino.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: server-ente
                port:
                  number: 80
